--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+
   </head>
   <body>
     <div id="app"></div>
+    <script>const l = console.log;</script>
     <script type="module" src="/src/main.js"></script>
   </body>
+
 </html>
