--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id='modal'></div>
     <script>const l = console.log;</script>
     <script type="module" src="/src/main.js"></script>
   </body>
